--- a/templates/teaching.html
+++ b/templates/teaching.html
@@ -3,7 +3,8 @@
 {% block content %}
 
   <div class="w-50 px-0 m-auto">
-    <div class="mx-auto rounded-pill justify-content-between d-flex align-items-center p-2 teaching" style="background-color: var(--light-gray); width: 85%; height: 80%;">      <button class="rounded-pill px-2 btn no-focus toggler-active" id="check" style="width: 50%; font-weight: 500">
+    <div class="mx-auto rounded-pill justify-content-between d-flex align-items-center p-2 teaching" style="background-color: var(--light-gray); width: 85%; height: 80%;">
+      <button class="rounded-pill px-2 btn no-focus toggler-active" id="check" style="width: 50%; font-weight: 500">
         <span class="h4">проверка</span>
         </button>
       <button class="rounded-pill px-2 btn no-focus" id="courses" style="width: 45%; font-weight: 500">
@@ -12,7 +13,8 @@
     </div>
   </div>
   <div class="w-50 px-0 justify-content-end align-items-center d-flex my-4 mx-auto">
-    <a href="{{ url_for('create_course') }}" class="btn btn-secondary py-auto w-50 d-none mx-auto" id="create"><span class="h5">Создать курс&nbsp;<i class="bi bi-plus-circle"></i></span></a>  </div>
+    <a href="{{ url_for('create_course') }}" class="btn btn-secondary py-auto w-50 d-none mx-auto" id="create"><span class="h5">Создать курс&nbsp;<i class="bi bi-plus-circle"></i></span></a>
+  </div>
 </div>
 {# content #}
 <div class="w-75 mx-auto">
@@ -56,4 +58,5 @@
         });
     });
 </script>
+
 {% endblock script %}
