--- a/templates/teaching.html
+++ b/templates/teaching.html
@@ -1,30 +1,27 @@
 {% extends 'base.html' %}
+{% from 'includes/course_thumbnail.html' import course_thumbnail with context %}
 {% block title %}Преподавание{% endblock title %}
 {% block content %}
-
-  <div class="w-50 px-0 m-auto">
-    <div class="mx-auto rounded-pill justify-content-between d-flex align-items-center p-2 teaching" style="background-color: var(--light-gray); width: 85%; height: 80%;">
-      <button class="rounded-pill px-2 btn no-focus toggler-active" id="check" style="width: 50%; font-weight: 500">
-        <span class="h4">проверка</span>
-        </button>
-      <button class="rounded-pill px-2 btn no-focus" id="courses" style="width: 45%; font-weight: 500">
-        <span class="h4">мои курсы</span>
+<div class="w-50 px-0 m-auto">
+  <div class="mx-auto rounded-pill justify-content-between d-flex align-items-center p-2 teaching" style="background-color: rgb(230, 230, 230); width: 85%; height: 80%;">
+    <button class="rounded-pill px-1 btn no-focus toggler-active" id="check" style="width: 45%; font-weight: 500;">
+      <span class="h4">Проверка</span>
       </button>
-    </div>
-  </div>
-  <div class="w-50 px-0 justify-content-end align-items-center d-flex my-4 mx-auto">
-    <a href="{{ url_for('create_course') }}" class="btn btn-secondary py-auto w-50 d-none mx-auto" id="create"><span class="h5">Создать курс&nbsp;<i class="bi bi-plus-circle"></i></span></a>
+    <button class="rounded-pill px-1 btn no-focus toggler-inactive" id="courses" style="width: 45%; font-weight: 500;">
+      <span class="h4">Мои курсы</span>
+    </button>
   </div>
 </div>
+<div class="w-75 px-0 justify-content-end align-items-center d-flex my-4 mx-auto">
+  <a href="{{ url_for('create_course') }}" class="btn py-auto w-25 d-none mx-auto mbgc" id="create"><span class="h5">Создать курс&nbsp;<i class="bi bi-plus-circle"></i></span></a>
+</div>
 {# content #}
-<div class="w-75 mx-auto">
-  <div id="check-div">
-
-  </div>
+<div class="mx-auto" style="width: 65%">
+  <div id="check-div"></div>
   <div class="d-none" id="courses-div">
     {% for c in courses %}
       <div class="row">
-        {% include "includes/course_thumbnail_teacher.html" %}
+        {{ course_thumbnail(c, teacher=True) }}
       </div>
     {% endfor %}
     </div>
@@ -54,9 +51,7 @@
             check_div.addClass('d-none');
             courses_div.removeClass('d-none');
             create.removeClass('d-none');
-
         });
     });
 </script>
-
 {% endblock script %}
