--- a/static/css/style.css
+++ b/static/css/style.css
@@ -64,27 +64,41 @@ html, body, .t-b {
 @media (max-width: 992px) {
     /* profile */
     .mt-profile {
-        margin-top: 2rem!important;
+        margin-top: 2rem !important;
     }
+
     .row-profile {
         margin-bottom: 3rem;
     }
+
     .row-profile > div {
         margin-right: auto;
         margin-left: auto;
     }
+
     .row-profile > div, .row-profile > div > img {
         width: 45%;
     }
+
     .w-profile {
         width: 75%;
     }
+
     /* teaching */
     .teaching {
         margin-right: auto;
     }
 }
-
+@media (max-width: 769px) {
+    .sm-fullsize {
+        width: 100%!important;
+    }
+}
+@media (max-width: 577px) {
+    .sm-column {
+        flex-direction: column;
+    }
+}
 .no-focus:focus {
     box-shadow: none !important;
 }
@@ -94,7 +108,6 @@ html, body, .t-b {
     font-weight: normal!important;
     cursor: default;
     font-size: 16px;
-    transition: all 1s ease-out;
     background-color: var(--mbgc)!important;
 }
 
@@ -104,30 +117,6 @@ html, body, .t-b {
 
 .search-text {
     color: white!important;
-}
-
-.task_check_item {
-    font-size: 18px;
-    font-weight: 500;
-    height: 3rem;
-    padding-top: 0.7rem;
-    padding-left: 15px;
-    padding-right: 15px;
-    background-color: #FFFFFF;
-    border: 1px solid rgb(240, 240, 240);
-    border-radius: 15px;
-    box-shadow: 0px 0px 20px 2px rgba(50, 50, 50, 0.06);
-    margin-bottom: 1.5rem;
-    vertical-align: middle;
-}
-
-.footer {
-    position: fixed; /* Фиксированное положение */
-    left: 0; bottom: 0; /* Левый нижний угол */
-    width: 100%; /* Ширина слоя */
-    background: rgb(17,26,58);
-    background: linear-gradient(95deg, rgba(17,26,58,1) 0%, rgba(27,59,139,1) 100%);
-    margin-bottom: 0!important;
 }
 
 .active-circle {
@@ -177,3 +166,4 @@ button.mbgc:hover, a.mbgc:hover {
     color: white!important;
 }
 /*27, 59, 193*/
+
