--- a/templates/base.html
+++ b/templates/base.html
@@ -76,17 +76,12 @@
     {% endblock content %}
   </div>
   <!---->
-  <footer class="footer d-flex flex-wrap justify-content-between align-items-center py-4" style="box-shadow: 0 0 20px rgba(32, 45, 160, 0.5)">
+  <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top sticky-bottom">
     <div class="col-md-4 d-flex align-items-center">
-      <a href="/" class="me-2 mb-md-0 text-muted text-decoration-none lh-1">
+      <a href="/" class="mb-3 me-2 mb-md-0 text-muted text-decoration-none lh-1">
         <svg class="bi" width="30" height="24"><use xlink:href="#bootstrap"></use></svg>
       </a>
-      <span style="color: rgb(160, 160, 160)">© 2022 Practice Hub, Inc</span>
-    </div>
-
-    <div class="col-md-4">
-      <a style="color: rgb(255, 255, 255)">Контакты</a><br>
-      <a style="color: rgb(255, 255, 255)">О проэкте</a>
+      <span class="text-muted">© PracticeHub by Хакактон 2023 </span>
     </div>
 
     <ul class="nav col-md-4 justify-content-end list-unstyled d-flex">
