--- a/static/css/style.css
+++ b/static/css/style.css
@@ -7,7 +7,7 @@
 }
 
 html, body, .t-b {
-    height: 100%;
+    min-height: 100%;
 }
 
 .btn {
@@ -119,6 +119,33 @@ html, body, .t-b {
     color: white!important;
 }
 
+.task_check_item {
+    font-size: 18px;
+    font-weight: 500;
+    height: 3rem;
+    padding-top: 0.7rem;
+    padding-left: 15px;
+    padding-right: 15px;
+    background-color: #FFFFFF;
+    border: 1px solid rgb(240, 240, 240);
+    border-radius: 15px;
+    box-shadow: 0px 0px 20px 2px rgba(50, 50, 50, 0.06);
+    margin-bottom: 1.5rem;
+    vertical-align: middle;
+}
+
+.footer {
+    position: relative;
+    left: 0px;
+    bottom: 0px;
+    width: 100%; /* Ширина слоя */
+    background-color: rgb(240, 240, 240);
+    padding-left: 25rem;
+    padding-right: 25rem;
+    margin-top: 2rem;
+    text-decoration: none;
+}
+
 .active-circle {
     background-color: var(--mbgc)!important;
     outline: white solid .5em!important;
@@ -134,7 +161,7 @@ html, body, .t-b {
     padding: 0 0 75% !important;
 }
 
-.circle {
+.c {
     background-color: var(--mbgc)!important;
     border: 0!important;
     box-shadow: none !important;
@@ -166,4 +193,3 @@ button.mbgc:hover, a.mbgc:hover {
     color: white!important;
 }
 /*27, 59, 193*/
-
