--- a/templates/base.html
+++ b/templates/base.html
@@ -7,67 +7,81 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>{% block title %}PracticeHub{% endblock title %}</title>
   <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
+        rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
+        crossorigin="anonymous">
+  <link rel="stylesheet"
+        href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
 </head>
 <body>
-  <nav class="navbar navbar-expand-lg navbar-dark" style="background: rgb(17,26,58); background: linear-gradient(95deg, rgba(17,26,58,1) 0%, rgba(27,59,139,1) 100%); box-shadow: 0 0 20px rgba(32, 45, 160, 0.5)">
+  <nav class="navbar navbar-expand-lg navbar-dark" style="background: rgb(17,26,58); background: linear-gradient(95deg, rgba(17,26,58,1) 0%, rgba(27,59,139,1) 100%); box-shadow: 0 0 20px rgba(32, 45, 160, 0.5)" id="header">
     <div class="container-fluid">
       <div>
-        <span class="navbar-brand">PracticeHub</span>
+        <a href="{{ url_for('promo') }}" style="text-decoration: none"><span class="navbar-brand">PracticeHub</span></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
       </div>
       {% if current_user.is_authenticated %}
+
       <div class="mx-3 order-lg-2 dropdown ms-4">
-        <a class="" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false" role="button">
-          <img src="https://media-exp1.licdn.com/dms/image/C560BAQHMnA03XDdf3w/company-logo_200_200/0/1519855918965?e=2159024400&v=beta&t=CrP5Le1mWICRcaxIGNBuajHcHGFPuyNA5C8DI339lSk" alt="пусто" height="40" width="40">
+        <a class="" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false"
+           role="button">
+          <img
+              src='{{ url_for("get_file", path=current_user.img_path) if current_user.img_path else url_for("get_file", path="static/images/default_avatar.jpg") }}'
+              alt="пусто" height="40" width="40" style="border-radius: 3px;">
         </a>
         <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="dropdownMenuButton1">
-          <li><a class="dropdown-item" href="{{ url_for('profile', id=current_user.id) }}">Профиль</a></li>
+          <li><a class="dropdown-item"
+                 href="{{ url_for('profile', id=current_user.id) }}">Профиль</a></li>
           <li><a class="dropdown-item" href="#">Мои курсы</a></li>
           <li><a class="dropdown-item" href="{{ url_for('teaching') }}">Преподавание</a></li>
           <li><a class="dropdown-item" href="{{ url_for('logout') }}">Выйти</a></li>
         </ul>
       </div>
-      {% else %}
+
+    {% else %}
       <div class="d-flex order-lg-2 ms-4">
-        <a href="{{ url_for('login') }}" class="btn me-2" style="color: white; border-color: rgba(73, 113, 191, 0.7)">Войти</a>
-        <a href="{{ url_for('register') }}" class="btn" style="color: white; border-color: rgba(73, 113, 191, 0.7)">Регистрация</a>
+        <a href="{{ url_for('login') }}" class="btn me-2"
+           style="color: white; border-color: rgba(73, 113, 191, 0.7)">Войти</a>
+        <a href="{{ url_for('register') }}" class="btn"
+           style="color: white; border-color: rgba(73, 113, 191, 0.7)">Регистрация</a>
       </div>
-      {% endif %}
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-          <li class="nav-item">
-            {% block catalog_link %}<a class="nav-link" href="{{ url_for('index') }}">Каталог</a>{% endblock catalog_link %}
-          </li>
-          <li class="nav-item">
-            {% block news_link %}<a class="nav-link" href="#">Новости</a>{% endblock news_link %}
-          </li>
-        </ul>
-        <form class="d-flex my-search-form">
-          <input class="form-control search-text" placeholder="Поиск" aria-label="Search" style="background-color: #151F55; border-color: rgba(73, 113, 191, 0.7)">
-          <button type="button" class="btn no-focus my-search-icon p-0 m-0" style="background: transparent"><i class="bi bi-search" style="color: white"></i></button>
-        </form>
-      </div>
+    {% endif %}
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+        <li class="nav-item">
+          {% block catalog_link %}
+            <a class="nav-link" href="{{ url_for('catalog') }}">Каталог</a>{% endblock catalog_link %}
+        </li>
+      </ul>
+      <form class="d-flex my-search-form" action="{{ url_for('search') }}" method="post">
+        <input class="form-control search-text checkSearchInput" placeholder="Поиск" aria-label="Search"
+               style="background-color: #151F55; border-color: rgba(73, 113, 191, 0.7)"
+               name="searchInput">
+        <button type="submit" class="btn no-focus my-search-icon p-0 m-0"
+                style="background: transparent"><i class="bi bi-search" style="color: white"></i>
+        </button>
+      </form>
     </div>
-  </nav>
-  <!---->
-  {% with messages = get_flashed_messages(with_categories=true) %}
+  </div>
+</nav>
+<!---->
+{% with messages = get_flashed_messages(with_categories=true) %}
   {% if messages %}
     <div class="w-50 mx-auto mt-3">
       {% for category, message in messages %}
-      <div role="alert" class="alert {% if category != 'message' %}alert-{{ category }}{% else %}alert-info{% endif %} alert-dismissible mb-1">
-        {{ message }}
-        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="close"></button>
-      </div>
+        <div role="alert" class="alert {% if category != 'message' %}alert-{{ category }}{% else %}alert-info{% endif %} alert-dismissible mb-1">
+          {{ message }}
+          <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="close"></button>
+        </div>
+      {% endfor %}
     </div>
-    {% endfor %}
   {% endif %}
   {% endwith %}
   <!---->
-  <div class="container-fluid px-0">
+  <div class="container-fluid m-0 p-0" id="fullsize-content">
     {% block fullsize_content %}
     {% endblock fullsize_content %}
   </div>
@@ -75,28 +89,37 @@
     {% block content %}
     {% endblock content %}
   </div>
+
   <!---->
-  <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top sticky-bottom">
-    <div class="col-md-4 d-flex align-items-center">
-      <a href="/" class="mb-3 me-2 mb-md-0 text-muted text-decoration-none lh-1">
+  <footer class="footer d-flex flex-wrap justify-content-between align-items-center py-4 row mx-0 px-0" id="footer" style="margin-top: 5rem;">
+    <div class="col-md-6">
+      <a href="/" class="me-2 mb-md-0 text-muted text-decoration-none lh-1">
         <svg class="bi" width="30" height="24"><use xlink:href="#bootstrap"></use></svg>
       </a>
-      <span class="text-muted">© PracticeHub by Хакактон 2023 </span>
+      <span style="color: rgb(160, 160, 160)">© PracticeHub by Хакатон 2023</span>
     </div>
 
-    <ul class="nav col-md-4 justify-content-end list-unstyled d-flex">
-
-    </ul>
+    <div class="col-md-6 pe-5">
+      <div class="float-end md-fullsize d-flex justify-content-between" style="width: 65%">
+        <div class="me-4">
+          <a style="color: rgb(50, 50, 50)">Контакты</a><br>
+          <a style="color: rgb(50, 50, 50)">О проекте</a>
+        </div>
+        <div>
+          <a href='{{ url_for("tags") }}' style="color: rgb(50, 50, 50); text-decoration: none">Документация по тегам</a><br>
+        </div>
+      </div>
+    </div>
   </footer>
   {# scripts #}
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.js" integrity="sha512-n/4gHW3atM3QqRcbCn6ewmpxcLAHGaDjpEBu4xZd47N0W2oQ+6q7oc3PXstrJYXcbNU1OHdQ1T7pAP+gi5Yu8g==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
   <script>
       $(function () {
-          $('#content').css('padding-bottom', `calc(2rem + ${$('footer').outerHeight()}px)`);
+        $('#content').css('min-height', `calc(100vh - ${$("#header").outerHeight()}px - ${$("#footer").outerHeight(true)}px - ${$("#fullsize-content").outerHeight(true)}px)`);
       });
-  </script>
-  {% block script %}
-  {% endblock script %}
+</script>
+{% block script %}
+{% endblock script %}
 </body>
 </html>
