--- a/templates/profile.html
+++ b/templates/profile.html
@@ -4,34 +4,81 @@
 <div class="w-profile mx-auto">
   <h1 class="text-center">Профиль</h1>
   <div class="row mt-profile">
-    <div class="col-lg-10 col-xs-12 px-0 order-2 order-lg-1">
-      <div class="row h5 mb-3">
-        <span>
-          Имя пользователя: {{ user.username }}&nbsp;<a href="#" class="primary-link"><i class="bi bi-pencil-square"></i></a>
-        </span>
-      </div>
-      <div class="row h5 mb-4">
-        <span>
-          Email: {{ user.email }}&nbsp;<a href="#" class="primary-link"><i class="bi bi-pencil-square"></i></a>
-        </span>
-      </div>
-      <div class="row h6">
-        <span class="mb-1">Создано курсов: {{ courses_cnt or 123 }}</span>
-        <span>Создано статей: {{ posts_cnt or 123 }}</span>
-      </div>
+    <div class="col-lg-3 col-xs-12 order-2 order-lg-1 row-profile px-3 align-items-center d-flex">
+      <img src="{{ avatar_path }}" alt="пусто" class="p-0" style="width: 100%; border-radius: 5px;">
     </div>
-    <div class="col-lg-2 col-xs-12 order-1 order-lg-2 row-profile">
-      <div class="row">
-        <img src="https://cdn.discordapp.com/attachments/917080744843706418/945760855902027858/IMG_20220222_221550_060.jpg" alt="пусто" class="border border-dark p-0" style="width: 100%">
-      </div>
-      <div class="row text-center">
-        <a href="#" class="primary-link px-0">Изменить</a>
+    <div class="col-lg-9 col-xs-12 px-0 order-1 order-lg-2 rounded py-2 px-3" style="background-color: rgb(240, 240, 240); box-shadow: 0 0 3rem rgba(0, 0, 0, 0.08)">
+      <div class="" style="width: fit-content">
+        <div class="row h5 mb-3">
+          <span>
+            Имя пользователя: {{ user.username }}
+          </span>
+        </div>
+        <div class="row h5 mb-4">
+          <span>
+            Email: {{ user.email }}
+          </span>
+        </div>
+        <div class="row h5">
+          <span class="mb-1">Создано курсов: {{ courses_cnt }}</span>
+        </div>
       </div>
     </div>
   </div>
-  <div class="row justify-content-between mt-5">
-    <a href="#" class="btn btn-outline-primary w-45">Изменить пароль</a>
-    <a href="#" class="btn btn-outline-primary w-45">Удалить аккаунт</a>
+  {% if user.id == current_user.id %}
+    <div class="row justify-content-between mt-5">
+      <a href="{{ url_for('edit_profile', id=current_user.id) }}" class="btn w-45 profile-button">Изменить профиль</a>
+      <a href="#" class="btn w-45 profile-button">Удалить аккаунт</a>
+    </div>
+  {% endif %}
+  <div class="d-flex justify-content-center row mt-5"> <!-- buttons -->
+    <ul class="nav sm-column w-100 pe-0" id="buttons" role="tablist">
+      <li class="nav-item active px-3 profile-link border w-50 text-center"
+          style="border-width: 0.1rem; border-radius: 50rem 0 0 50rem;">
+        <a href="#buttons-tabs-1" class="fs-4 nav-link active" style="color: black;"
+           aria-controls="buttons-tabs-1" role="tab" data-bs-toggle="tab">Обучение</a></li>
+
+      <li class="nav-item px-3 profile-link border w-50 text-center"
+          style="border-width: 0.1rem; border-radius: 0rem 50rem 50rem 0rem;">
+        <a href="#buttons-tabs-3" class="fs-4 nav-link" style="color: black;"
+           aria-controls="buttons-tabs-3" role="tab" data-bs-toggle="tab">Созданные курсы</a></li>
+    </ul>
+  </div>
+</div>
+<div class="w-100 md-fullsize" style="margin-bottom: 7rem;">
+  <div class="tab-content">
+    <div class="tab-pane active" id="buttons-tabs-1" role="tabpanel">
+      <div class="mt-4 mx-auto" style="align-content: center; align-items: center; width: fit-content">
+        <div style="align-items: center">
+          <h3>Тут ничего нет</h3>
+          <p class="text-muted">Похоже, что пользователь не прошёл ни одного курса</p>
+        </div>
+      </div>
+    </div>
+
+    <div class="tab-pane" id="buttons-tabs-2" role="tabpanel">
+      <p style="text-align: center; margin-top: 3rem;">Статьи тест</p>
+    </div>
+
+    <div class="tab-pane" id="buttons-tabs-3" role="tabpanel">
+      {% if courses|length == 0 %}
+        <div class="mt-4 mx-auto" style="align-content: center; align-items: center; width: fit-content">
+          <div style="align-items: center">
+            <h3>Тут ничего нет</h3>
+            <p class="text-muted">Похоже, что пользователь не опубликовал ни одного курса</p>
+          </div>
+        </div>
+
+      {% else %}
+        {% for c in courses %}
+          <div class="col-6 mx-auto">
+            {{ course_thumbnail(c) }}
+          </div>
+        {% endfor %}
+
+      {% endif %}
+
+    </div>
   </div>
 </div>
 {% endblock content %}
