--- a/templates/edit_profile.html
+++ b/templates/edit_profile.html
@@ -6,13 +6,13 @@
     <div class="row mx-auto">
       <div class="col-md-3">
         <div class="d-flex flex-column text-center">
-          <button class="border py-2 rounded" id="mainInfo"
+          <button onclick="return swap();" class="border py-2 rounded" id="mainInfo"
                   style="background-color: rgba(27,59,139,1); color: white;">Основная информация
           </button>
-          <button class="border py-2 rounded" id="security"
+          <button onclick="return swap();" class="border py-2 rounded" id="security"
                   style="background-color: white">Безопасность
           </button>
-          <button  class="border py-2 rounded" id="avatar"
+          <button onclick="return swap();" class="border py-2 rounded" id="security"
                   style="background-color: white">Фото профиля
           </button>
         </div>
@@ -85,16 +85,6 @@
             {{ password_form.submit(class="btn mt-4", style="background-color: rgba(27,59,139,1); color: white") }}
           </form>
         </div>
-        <div class="container" style="display: none" id="avatarForm">
-          <form action="" method="post" enctype="multipart/form-data" novalidate>
-            {{ avatar_form.hidden_tag() }}
-            <div class="mb-3">
-              <span class="me-3" style="white-space: nowrap">{{ avatar_form.avatar.label }}</span>
-              {{ avatar_form.avatar(class="form-control") }}
-            </div>
-            {{ avatar_form.submit(class="btn mt-4", style="background-color: rgba(27,59,139,1); color: white") }}
-          </form>
-        </div>
       </div>
     </div>
   </div>
@@ -102,61 +92,34 @@
 
 {% block script %}
   <script>
-      $(function() {
-          let main_info_btn = $("#mainInfo");
-          let security_btn = $("#security");
-          let avatar_btn = $("#avatar");
+      function swap() {
+          let mainForm = document.getElementById('mainInfForm');
+          let pwdForm = document.getElementById('passwordForm');
 
-          let main_info_form = $("#mainInfForm");
-          let password_form = $("#passwordForm");
-          let avatar_form = $("#avatarForm");
+          let mainFormButton = document.getElementById('mainInfo');
+          let passwordFormButton = document.getElementById('security');
 
+          if (mainForm.style.display === 'none') {
+              pwdForm.style.display = 'none';
+              mainForm.style.display = '';
 
-          main_info_btn.click(function() {
-              password_form.css("display", "none");
-              avatar_form.css("display", "none");
-              main_info_form.css("display", "block");
+              mainFormButton.style.background = 'rgba(27,59,139,1)';
+              mainFormButton.style.color = 'white';
 
-              main_info_btn.css("background", "rgba(27,59,139,1)");
-              main_info_btn.css("color", "white");
+              passwordFormButton.style.background = 'white';
+              passwordFormButton.style.color = '';
+          } else {
+              pwdForm.style.display = '';
+              mainForm.style.display = 'none';
 
-              security_btn.css("background", "white");
-              security_btn.css("color", "black");
+              mainFormButton.style.background = 'white';
+              passwordFormButton.style.background = 'rgba(27,59,139,1)';
 
-              avatar_btn.css("background", "white");
-              avatar_btn.css("color", "black");
-          });
+              mainFormButton.style.color = '';
+              passwordFormButton.style.color = 'white';
 
-          security_btn.click(function() {
-              password_form.css("display", "block");
-              avatar_form.css("display", "none");
-              main_info_form.css("display", "none");
-
-              main_info_btn.css("background", "white");
-              main_info_btn.css("color", "black");
-
-              security_btn.css("background", "rgba(27,59,139,1)");
-              security_btn.css("color", "white");
-
-              avatar_btn.css("background", "white");
-              avatar_btn.css("color", "black");
-          });
-
-          avatar_btn.click(function() {
-              password_form.css("display", "none");
-              avatar_form.css("display", "block");
-              main_info_form.css("display", "none");
-
-              main_info_btn.css("background", "white");
-              main_info_btn.css("color", "black");
-
-              security_btn.css("background", "white");
-              security_btn.css("color", "black");
-
-              avatar_btn.css("background", "rgba(27,59,139,1)");
-              avatar_btn.css("color", "white");
-          });
-      });
+          }
+      }
   </script>
 
 {% endblock %}
