--- a/templates/tag_docs.html
+++ b/templates/tag_docs.html
@@ -2,6 +2,15 @@
 {% block title %} Документация по тегам {% endblock title %}
 {% block content %}
 <div>
+    <h2>Взаимодействовать через Telegram</h2><br>
+    <span class="tags-docs-text" style="font-weight: 500!important"><span style="font-weight: 500!important">Найти </span><a href="https://t.me/Practicehub_bot"><span style="color: rgb(100, 120, 255)!important">@Practicehub_bot</span></a></span>
+
+    <span class="tags-docs-text" style="font-weight: 500!important"><div>Добавить чат и сделать админом</div></span>
+</div>
+<div><br><br>
+    <h2>Теги</h2>
+</div>
+<div><br>
     <span class="tags-docs-text" style="font-weight: 500!important"><b><span style="color: rgb(100, 120, 255)!important">Теги</span></b>
         - способ форматирование текста на нашей платформе, они применяются при создании курса, а так же при создании уроков</span>
 </div>
