--- a/static/css/promo.css
+++ b/static/css/promo.css
@@ -64,7 +64,7 @@ body {
   	-webkit-text-fill-color: transparent;
   	margin-bottom: 2rem;
   	font-family: 'Roboto', sans-serif;
-	font-size: 8rem;
+	font-size: 6vw;
 	text-shadow: 0 0 50rem rgba(150, 70, 255, 0.5);
 	transition: 1s;
 	cursor: default;
@@ -82,7 +82,7 @@ body {
 	opacity: 0.8;
 	color: white;
 	font-family: 'Roboto', sans-serif;
-	font-size: 2rem;
+	font-size: 3vw;
 	transition: 1s;
 	cursor: default;
 	animation: desc-load 1s ease-out;
@@ -122,7 +122,7 @@ body {
 	position: relative;
 	left: 0.25rem;
 	font-family: 'Roboto', sans-serif;
-	font-size: 1.5rem;
+	font-size: 1rem;
 	text-decoration: none;
 	color: white;
 	transition: 0.5s;
@@ -131,6 +131,7 @@ body {
 	border-radius: 0.75rem;
 	padding: 0.75rem;
 	margin-left: 1rem;
+	margin-bottom: 10px;
 }
 
 .login-register {
@@ -210,4 +211,113 @@ body {
     opacity: 0.3;
     transition: 0.5s;
     margin-left: 1.5rem;
+}
+
+@media (max-width: 650px) {
+    .decorative-square-1 {
+        display: none !important;
+    }
+
+    .decorative-blur-1 {
+        display: none !important;
+    }
+
+    .header {
+        position: relative;
+        background: linear-gradient(120deg, rgba(148,63,251,1) 3%, rgba(94,63,251,1) 40%, rgba(164,70,252,1) 100%);
+        -webkit-background-clip: text;
+        -webkit-text-fill-color: transparent;
+        margin-bottom: 2rem;
+        font-family: 'Roboto', sans-serif;
+        font-size: 40px;
+        text-shadow: 0 0 50rem rgba(150, 70, 255, 0.5);
+        transition: 1s;
+        cursor: default;
+        animation: header-load 1s ease-out;
+        z-index: 1;
+        margin-left: -100px;
+        width: 100%
+    }
+
+    .description:hover {
+        opacity: 1;
+    }
+
+    .description {
+        position: relative;
+        opacity: 0.8;
+        color: white;
+        font-family: 'Roboto', sans-serif;
+        font-size: 20px;
+        transition: 1s;
+        cursor: default;
+        animation: desc-load 1s ease-out;
+        margin-bottom: 4rem;
+        margin-left: -100px;
+        width: 100%
+    }
+
+    .catalog {
+        display:inline-block;
+        position: relative;
+        left: 0.25rem;
+        font-family: 'Roboto', sans-serif;
+        font-size: 1.5rem;
+        text-decoration: none;
+        color: white;
+        transition: 0.5s;
+        cursor: pointer;
+        animation: header-load 1s ease-out;
+        border: 2px solid rgba(148,63,251,1);
+        border-radius: 1rem;
+        padding: 1rem;
+        margin-left: -100px;
+    }
+}
+
+@media (min-width: 1200px) {
+    .header {
+        position: relative;
+        background: linear-gradient(120deg, rgba(148,63,251,1) 3%, rgba(94,63,251,1) 40%, rgba(164,70,252,1) 100%);
+        -webkit-background-clip: text;
+        -webkit-text-fill-color: transparent;
+        margin-bottom: 2rem;
+        font-family: 'Roboto', sans-serif;
+        font-size: 7rem;
+        text-shadow: 0 0 50rem rgba(150, 70, 255, 0.5);
+        transition: 1s;
+        cursor: default;
+        animation: header-load 1s ease-out;
+        z-index: 1;
+        margin-top: -100px;
+    }
+
+    .description {
+        position: relative;
+        left: 0.25rem;
+        opacity: 0.8;
+        color: white;
+        font-family: 'Roboto', sans-serif;
+        font-size: 2rem;
+        transition: 1s;
+        cursor: default;
+        animation: desc-load 1s ease-out;
+        margin-bottom: 4rem;
+    }
+
+    .catalog {
+        display:inline-block;
+        position: relative;
+        left: 0.25rem;
+        font-family: 'Roboto', sans-serif;
+        font-size: 1.5rem;
+        text-decoration: none;
+        color: white;
+        transition: 0.5s;
+        cursor: pointer;
+        animation: header-load 1s ease-out;
+        border: 2px solid rgba(148,63,251,1);
+        border-radius: 1rem;
+        padding: 1rem;
+    }
 }
