--- a/templates/base.html
+++ b/templates/base.html
@@ -102,7 +102,7 @@
     <div class="col-md-6 pe-5">
       <div class="float-end md-fullsize d-flex justify-content-between" style="width: 65%">
         <div class="me-4">
-          <a href="https://t.me/+GFPA-ZvZ4Nc2MjEy" style="color: rgb(50, 50, 50)">Связь с нами</a><br>
+          <a href="https://t.me/+GFPA-ZvZ4Nc2MjEy" style="color: rgb(50, 50, 50); text-decoration: none">Связь с нами</a><br>
         </div>
         <div>
           <a href='{{ url_for("tags") }}' style="color: rgb(50, 50, 50); text-decoration: none">Как создавать курсы?</a><br>
