--- a/templates/index.html
+++ b/templates/index.html
@@ -32,7 +32,7 @@
 
 			</div>
 			<div class="col-4 pe-5">
-				<i class="fa-brands fa-telegram icon float-end"><a href="https://t.me/+GFPA-ZvZ4Nc2MjEy"></a></i>
+				<a href="https://t.me/+GFPA-ZvZ4Nc2MjEy"><i class="fa-brands fa-telegram icon float-end"></i></a>
 			</div>
 		</div>
 	</div>
