--- a/templates/index.html
+++ b/templates/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<meta charset="utf-8">
+
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="../static/css/promo.css">
 	<link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
@@ -28,9 +29,7 @@
 	<div class="footer-promo">
 		<div class="row py-4">
 			<div class="col-4"></div>
-			<div class="col-4 text-center">
-
-			</div>
+			<div class="col-4 text-center"></div>
 			<div class="col-4 pe-5">
 				<a href="https://t.me/+GFPA-ZvZ4Nc2MjEy"><i class="fa-brands fa-telegram icon float-end"></i></a>
 			</div>
