--- a/templates/create_course.html
+++ b/templates/create_course.html
@@ -22,10 +22,10 @@
       {{ form.name(class="w-100 form-control mt-1 mt-auto mb-0", placeholder="Название", style="font-size: 1.3rem") }}
     </div>
     <div class="col-6">
-      {{ form.desc(class="form-control h-100", style="resize: none; width: 100%") }}
+      {{ form.desc(class="form-control h-100", style="resize: none; width: 100%", placeholder="Описани курса",) }}
     </div>
     <div class="col-3">
-      {{ form.short_desc(class="form-control h-100", style="resize: none; width: 100%") }}
+      {{ form.short_desc(class="form-control h-100", style="resize: none; width: 100%", placeholder="Что будет изучено на этом курсе, а также можете добавить ссылку на телеграм группу") }}
     </div>
   </div>
   <div class="row mt-4">
