--- a/templates/includes/course_thumbnail.html
+++ b/templates/includes/course_thumbnail.html
@@ -1,6 +1,6 @@
 {% macro course_thumbnail(c, teacher=False) %}
   {% if teacher %}
-  <div class="card mb-3 mt-3 mx-auto text-dark"
+  <div class="card mb-3 mt-3 mx-auto text-dark w-100"
        style="border-radius: 1rem; background-color: #f7f7f5; box-shadow: 0 0 20px #d9d9d4; text-decoration: none; display: block">
     <div class="row">
       <div class="col-md-2 d-flex align-items-center px-4">
