--- a/templates/teaching.html
+++ b/templates/teaching.html
@@ -93,5 +93,8 @@
             $('#hi' + $(this).attr('id').substr(1)).attr('value', 0)
         });
     });
+
+    document.querySelector('.w-50').classList.remove('w-50')
+    document.querySelector('.w-25').classList.remove('w-25')
 </script>
 {% endblock script %}
