--- a/templates/profile.html
+++ b/templates/profile.html
@@ -67,7 +67,7 @@
            aria-controls="buttons-tabs-3" role="tab" data-bs-toggle="tab">Созданные курсы</a></li>
     </ul>
   </div>
-</div>
+</div><br><br>
 <div class="w-100 md-fullsize" style="margin-bottom: 7rem;">
   <div class="tab-content">
     <div class="tab-pane active" id="buttons-tabs-1" role="tabpanel">
